implement product search component

--- a/Angular/Index.html
+++ b/Angular/Index.html
@@ -12,10 +12,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <!--<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="node_modules/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">-->
-    
-
+    <link rel="stylesheet" href="bootstrap-overrides.css">
+    <link rel="stylesheet" href="styles.css">
+        
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
@@ -23,8 +22,8 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <!--<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
-
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="systemjs.config.js"></script>
@@ -33,7 +32,7 @@
     </script>    
   </head>
 
-  <body>
-    <my-app>Loading GSKC Website content here ...</my-app>
-  </body>
+ <body style="height: 100%; background-color: #555454">
+<my-app></my-app>
+</body>
 </html>
