--- a/Angular/Index.html
+++ b/Angular/Index.html
@@ -15,16 +15,18 @@
     <link rel="stylesheet" href="bootstrap-overrides.css">
     <link rel="stylesheet" href="styles.css">
         
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+
+    <!-- Bootstrap library -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>    
 
     <script src="systemjs.config.js"></script>
     <script>
@@ -32,15 +34,18 @@
     </script>    
   </head>
 
- <body style="height: 100%; background-color: #555454">
-<my-app></my-app> 
+  <body style="height: 100%; background-color: #555454">
+  <my-app></my-app> 
 
-<script language="JavaScript" type="text/javascript">
-  $(document).ready(function(){
-    $('.myCarousel').carousel({
-      interval: 2000
-    })
-  });    
-</script>
+  <script language="JavaScript" type="text/javascript">
+    // $(document).ready(function(){       
+    //    setTimeout(function(){
+    //    $('.myCarousel').carousel({
+    //     interval: 2000
+    //     }); 
+          
+    //   },5000);        
+    // });    
+  </script>
 </body>
 </html>
