--- a/Angular/Index.html
+++ b/Angular/Index.html
@@ -8,26 +8,29 @@
 
     <!-- Latest compiled and minified CSS -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="bootstrap-overrides.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles/bootstrap-overrides.css">
+    <link rel="stylesheet" href="Styles/offcanvas.css">
+    <link rel="stylesheet" href="Styles/sticky-footer.css">
+    <link rel="stylesheet" href="Styles/styles.css">
         
-    <!-- jQuery library -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>-->
+    <script src="Scripts/modernizr-2.6.2.js"></script>
 
-    <!-- Bootstrap library -->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>    
+    <script src="node_modules/systemjs/dist/system.src.js"></script>  
 
     <script src="systemjs.config.js"></script>
     <script>
@@ -36,17 +39,11 @@
   </head>
 
   <body style="height: 100%; background-color: #555454">
-  <my-app></my-app> 
-
-  <script language="JavaScript" type="text/javascript">
-    // $(document).ready(function(){       
-    //    setTimeout(function(){
-    //    $('.myCarousel').carousel({
-    //     interval: 2000
-    //     }); 
-          
-    //   },5000);        
-    // });    
-  </script>
+    <my-app></my-app> 
+    <!-- Bootstrap library -->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="Scripts/offcanvas.js"></script>
+  
 </body>
 </html>
