enable collaspible search options

--- a/Angular/app/ProductSearch/product-search-component.html
+++ b/Angular/app/ProductSearch/product-search-component.html
@@ -16,8 +16,8 @@
     <!-- Search by Brand -->
 
     <div class="filter-header">
-        <div  style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
-            <div class="button-arrow" style="float:left; margin-left: 5px"></div>
+        <div (click)="slideFilterList()"  style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
+            <div (click)="slideFilterList()" class="button-arrow" style="float:left; margin-left: 5px"></div>
             <div class="search-type">Search by Brand</div>
             <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer;margin: 5px 18px" title="Uncheck All"></div>
             <div style="clear: both"></div>
@@ -51,8 +51,8 @@
     <!-- Search by Price -->
 
     <div class="filter-header">
-        <div  style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
-            <div class="button-arrow" style="float:left; margin-left: 5px"></div>
+        <div (click)="slideFilterList()"  style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
+            <div (click)="slideFilterList()" class="button-arrow" style="float:left; margin-left: 5px"></div>
             <div class="search-type">Search by Price</div>
             <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer;margin: 5px 18px" title="Uncheck All"></div>
             <div style="clear: both"></div>
@@ -86,8 +86,8 @@
     <!-- Search by Category -->
 
     <div class="filter-header">
-        <div  style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
-            <div class="button-arrow" style="float:left; margin-left: 5px"></div>
+        <div  (click)="slideFilterList()" style="background-color: #c4c2c2; padding: 10px 0; border-bottom: 1px dotted #FFF; cursor:pointer">
+            <div (click)="slideFilterList()" class="button-arrow" style="float:left; margin-left: 5px"></div>
             <div class="search-type">Search by Category</div>
             <div class="uncheck-all hidden-xs hidden-sm hidden-md hidden-lg" style="float: left; cursor: pointer;margin: 5px 18px" title="Uncheck All"></div>
             <div style="clear: both"></div>
