add calendar service

--- a/Angular/Index.html
+++ b/Angular/Index.html
@@ -24,6 +24,8 @@
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!-- Google APIs -->
+    <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
