--- a/Angular/Index.html
+++ b/Angular/Index.html
@@ -38,6 +38,10 @@
     <script>
         System.import('app').catch(function(err){console.error(err); })
     </script>    
+
+    <style>
+      .my-pagination .ng2-pagination .current {background: #fe9704;}
+    </style>
   </head>
 
   <body style="height: 100%; background-color: #555454">
